--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@picocss/pico": "^2.0.6",
     "formik": "^2.4.6",
     "i18next": "^24.2.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.2"
+    "react-i18next": "^15.0.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,6 +28,7 @@
     "eslint-config-next": "15.1.2",
     "prettier": "^3.4.2",
     "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "typescript": "^5"
   }
 }
