--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@picocss/pico": "^2.0.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@tanstack/react-query": "^5.62.16",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "i18next": "^24.2.0",
     "jwt-decode": "^4.0.0",
-    "next": "15.1.2",
+    "next": "15.1.7",
     "next-themes": "^0.4.4",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
@@ -25,7 +32,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "15.1.7",
     "prettier": "^3.4.2",
     "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
